[gd_scene load_steps=25 format=2]

[ext_resource path="res://UI/Buttons/UI Buttons/Concrete Info Button.png" type="Texture" id=1]
[ext_resource path="res://UI/Buttons/UI Buttons/Concrete Menu Button.png" type="Texture" id=2]
[ext_resource path="res://UI/Buttons/UI Buttons/Concrete Task Button.png" type="Texture" id=3]
[ext_resource path="res://UI/Pop up window/Pop up window bg.png" type="Texture" id=4]
[ext_resource path="res://Font/Windows Regular.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://Settings/Resume button pressed.png" type="Texture" id=6]
[ext_resource path="res://Settings/Quit button normal.png" type="Texture" id=7]
[ext_resource path="res://Settings/Resume button normal.png" type="Texture" id=8]
[ext_resource path="res://Settings/Quit button pressed.png" type="Texture" id=9]
[ext_resource path="res://Settings/Music icon.png" type="Texture" id=10]
[ext_resource path="res://SettingsWindow.gd" type="Script" id=11]
[ext_resource path="res://Menu Buttons.gd" type="Script" id=12]
[ext_resource path="res://UI/Buttons/UI Buttons/Concrete Menu Button pressed.png" type="Texture" id=13]
[ext_resource path="res://SoundEffects/ButtonClickSoundEffect 2.wav" type="AudioStream" id=14]
[ext_resource path="res://Settings/slider grabber icon.png" type="Texture" id=15]
[ext_resource path="res://UI/Buttons/UI Buttons/Concrete Info Button pressed.png" type="Texture" id=16]
[ext_resource path="res://Settings/Cool button normal.png" type="Texture" id=17]
[ext_resource path="res://Settings/Cool button pressed.png" type="Texture" id=18]
[ext_resource path="res://InfoWindow.gd" type="Script" id=19]

[sub_resource type="DynamicFont" id=1]
size = 52
font_data = ExtResource( 5 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.545098, 0.607843, 0.705882, 1 )
expand_margin_top = 3.0
expand_margin_bottom = 3.0

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.752941, 0.796078, 0.862745, 1 )
expand_margin_top = 3.0
expand_margin_bottom = 3.0

[sub_resource type="DynamicFont" id=4]
size = 32
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=5]
size = 40
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_char = 3
font_data = ExtResource( 5 )

[node name="MenuButtons" type="Node2D"]
script = ExtResource( 12 )

[node name="InfoButton" type="TextureButton" parent="."]
margin_left = 21.0
margin_top = 11.0
margin_right = 61.0
margin_bottom = 51.0
rect_scale = Vector2( 2.5, 2.5 )
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 16 )

[node name="MenuButton" type="TextureButton" parent="."]
margin_left = 1152.0
margin_top = 11.0
margin_right = 1192.0
margin_bottom = 51.0
rect_scale = Vector2( 2.5, 2.5 )
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 13 )

[node name="ConcreteTaskButton" type="Sprite" parent="."]
visible = false
position = Vector2( 175, 61 )
scale = Vector2( 2.5, 2.5 )
texture = ExtResource( 3 )

[node name="SettingsWindow" type="Node2D" parent="."]
visible = false
position = Vector2( 640, 360 )
script = ExtResource( 11 )
bus_name = "Music"
scene_to_load = "res://TitleScreen.tscn"

[node name="ColorRect" type="ColorRect" parent="SettingsWindow"]
margin_left = -640.0
margin_top = -360.0
margin_right = 640.0
margin_bottom = 360.0
color = Color( 0, 0, 0, 0.709804 )

[node name="WindowBG" type="Sprite" parent="SettingsWindow"]
scale = Vector2( 2, 2 )
texture = ExtResource( 4 )

[node name="Settings" type="Label" parent="SettingsWindow"]
margin_left = -101.0
margin_top = -217.0
margin_right = 90.0
margin_bottom = -154.0
rect_pivot_offset = Vector2( 94, 30 )
custom_colors/font_color = Color( 0.752941, 0.768627, 0.847059, 1 )
custom_fonts/font = SubResource( 1 )
text = "SETTINGS"
align = 1

[node name="ResumeButton" type="TextureButton" parent="SettingsWindow"]
margin_left = -128.0
margin_top = -35.0
margin_right = 126.0
margin_bottom = 44.0
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 6 )

[node name="QuitButton" type="TextureButton" parent="SettingsWindow"]
margin_left = -128.0
margin_top = 92.0
margin_right = 126.0
margin_bottom = 168.0
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 9 )

[node name="MusicIcon" type="Sprite" parent="SettingsWindow"]
position = Vector2( -189, -95 )
scale = Vector2( 2, 2 )
texture = ExtResource( 10 )

[node name="HSlider" type="HSlider" parent="SettingsWindow"]
margin_left = -157.0
margin_top = -107.0
margin_right = 203.0
margin_bottom = -76.0
custom_icons/grabber_highlight = ExtResource( 15 )
custom_icons/grabber = ExtResource( 15 )
custom_styles/slider = SubResource( 2 )
custom_styles/grabber_area_highlight = SubResource( 3 )
min_value = -6.0
max_value = 10.0

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="SettingsWindow"]
stream = ExtResource( 14 )
volume_db = 0.5

[node name="InfoWindow" type="Node2D" parent="."]
visible = false
script = ExtResource( 19 )

[node name="ColorRect" type="ColorRect" parent="InfoWindow"]
margin_right = 1280.0
margin_bottom = 720.0
color = Color( 0, 0, 0, 0.709804 )

[node name="WindowBG" type="Sprite" parent="InfoWindow"]
position = Vector2( 656, 360 )
scale = Vector2( 2, 2 )
texture = ExtResource( 4 )

[node name="Info" type="Label" parent="InfoWindow"]
margin_left = 555.0
margin_top = 143.0
margin_right = 746.0
margin_bottom = 206.0
rect_pivot_offset = Vector2( 94, 30 )
custom_colors/font_color = Color( 0.752941, 0.768627, 0.847059, 1 )
custom_fonts/font = SubResource( 1 )
text = "INFO"
align = 1

[node name="Content" type="Label" parent="InfoWindow"]
margin_left = 416.0
margin_top = 231.0
margin_right = 891.0
margin_bottom = 312.0
custom_fonts/font = SubResource( 4 )
text = "This will contain information of the project,
it's still under construction :D
"

[node name="TextureButton" type="TextureButton" parent="InfoWindow"]
margin_left = 524.0
margin_top = 436.0
margin_right = 778.0
margin_bottom = 512.0
texture_normal = ExtResource( 17 )
texture_pressed = ExtResource( 18 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="InfoWindow"]
stream = ExtResource( 14 )
volume_db = 3.0

[node name="Stage" type="Label" parent="."]
margin_left = 139.0
margin_top = 39.0
margin_right = 391.0
margin_bottom = 98.0
custom_colors/font_color = Color( 0.921569, 0.909804, 0.878431, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 5 )
text = "STAGE 1 - EMPATHIZE"

[connection signal="pressed" from="InfoButton" to="." method="_on_InfoButton_pressed"]
[connection signal="pressed" from="MenuButton" to="." method="_on_MenuButton_pressed"]
[connection signal="value_changed" from="SettingsWindow/HSlider" to="SettingsWindow" method="_on_HSlider_value_changed"]
